--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,147 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+
+/*order/complete*/
+.complete-back {
+	width:100%;
+	height:100%;
+	background-color:#dcdcdc;
+	padding-top:50px;
+}
+.complete {
+	width:800px;
+	height:400px;
+	background-color:white;
+	margin:0 auto 100px;
+	padding-top:20px;
+	border:outset;
+}
+.complete-big-text {
+	font-size:40px;
+	text-align:center;
+
+}
+.complete-text {
+	font-size:20px;
+	margin:50px 0 30px;
+	text-align:center;
+}
+.under{
+	text-decoration: underline;
+}
+
+
+/*order/new*/
+.order-back {
+	width:100%;
+	height:100%;
+	background-color:#dcdcdc;
+	padding-top:30px;
+}
+.order {
+	background-color:white;
+	width:800px;
+	margin:0 auto 30px;
+	padding:auto;
+	border:outset;
+	text-align:center;
+}
+.order-box {
+	width:700px;
+	background-color:#f5f5f5;
+	margin:0 auto;
+	border:inset 3px;
+	padding-top:2px;
+}
+.sendbox {
+	font-size:20px;
+	text-align:center;
+	border:outset 3px;
+	height:150px;
+}
+.address-form {
+	width:550px;
+	height:30px;
+	border:solid 1px;
+	margin:0 auto;
+}
+.delivery {
+	font-size:20px;
+	text-align:center;
+	border:outset;
+	height:150px;
+}
+.delivery-box {
+	width:550px;
+	height:30px;
+	border:solid 1px black;
+	margin:10px auto 0 ;
+	color:#dcdcdc;
+}
+.pay {
+	font-size:20px;
+	text-align:center;
+	border:outset 3px;
+	height:100px;
+}
+.preorder {
+	font-size:20px;
+	text-align:center;
+	border:outset 3px;
+}
+.pre-product {
+	width:650px;
+	height:100px;
+	border:solid 1px;
+	margin:5px auto 0;
+	padding:8px 0 0 8px;
+}
+.price-table {
+	width:200px;
+	height:10px;
+	float:right;
+}
+.product-image {
+	width:80px;
+	height:80px;
+	border:solid 1px;
+	float:left;
+}
+.order-text {
+	float:left;
+	line-height: 80px;
+}
+.preorder-price {
+	float:right;
+	margin:50px 5px 0 0;
+}
+table th, table td {
+  border: solid 1px black;
+  font-size:15px;
+}
+
+/*/order/show*/
+.purchase {
+	width:1240px;
+	height:800px;
+	background-color:#dcdcdc;
+	padding-top:30px;
+}
+
+
+
+
+
