--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -258,8 +258,17 @@ th , td {
   height:100px;
   background-color: black;
 }
+.product_new_topbottom{
+  background-color: #708090;
+  height: 100px;
+}
 
-
+.product_new_heading{
+  text-align: center;
+}
+.product_new_heading h1{
+  display: inline-block;
+}
 
 /*以下　岡田*/
 /*header用のCSS*/
