--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <h1>index</h1>
 <p><%= link_to "new", new_product_path %></p>
-<table>
+<table class="table">
 		<h2>Product</h2>
 		<thead>
 			<tr>
@@ -14,6 +14,7 @@
 				<th>Artist</th>
 				<th>Label</th>
 				<th>Genre</th>
+				<th>Disc_Number</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -29,6 +30,11 @@
 					<td><%= product.artist.artist_name %></td>
 					<td><%= product.label.label_name %></td>
 					<td><%= product.genre.genre_name %></td>
+					<td>
+						<% product.discs.each do |disc| %>
+							<%= disc.id %>
+						<% end %>
+					</td>
 				</tr>
 			<% end %>
 		</tbody>
