--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,9 @@
 <div class="order-back">
- <div class="order">
+	<div class="container">
+	 <div class="row">
+      <div class="col-lg-3">
+      </div>
+       <div class="order">
     <h2>支払い方法・注文内容の確認</h2>
       
   <div class="order-box">
@@ -50,17 +54,17 @@
 
      </div>
 
-     <div class="preorder">
+     <div class="preorder clearfix">
      	<h4>商品の確認
      	</h4>
-      <div class="pre-product crearfix">
+      <div class="pre-product clearfix">
       	<div class="product-image">NO IMAGE
       	</div>
       	<p class="order-text">【UNCHAIN】 10fold</p>
       	<p class="preorder-price">3,240円 </p>
       </div>
-
-      	<table>
+    
+      	<table class="price-table">
 		　<tr>
 		　　<td>商品合計数 </td>
 		　　<td>３</td>
@@ -75,6 +79,9 @@
 		</tr>
 		</table>
 
+
+    </div>
+    </div>
   </div>
  </div>
 </div>
