--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,4 +1,23 @@
 <div class="purchase">
+ <div class="container">
+  <div class="row">
+  	
+  	<div class="col-lg-2">
+  	</div>
+
+  	<div class="col-lg-8">
+  	
+  	<h2>購入商品の詳細</h2>
+  	<div class="purchase-detail">
+  		購入した商品はありません
+  	</div>
+
+
+
+  	</div>
+
+  	<div class="col-lg-2">
+  	</div>
 
 
 
@@ -6,18 +25,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  </div>
+ </div>
 </div>
