--- a/app/views/admins/shared/_links.html.erb
+++ b/app/views/admins/shared/_links.html.erb
@@ -1,7 +1,8 @@
-<%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
-<% end -%>
-
+<div class="link_tag">
+  <%- if controller_name != 'sessions' %>
+    <%= link_to "管理者登録はお済みの方はこちら", new_session_path(resource_name) %><br />
+  <% end -%>
+</div>
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
   <%= link_to "Sign up", new_registration_path(resource_name) %><br />
 <% end -%>
