--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,43 +1,75 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
+<div class="user_edit_container">
+<div class="headline_box">
+  <h2 class="useredit_headline">登録情報編集 </h2>
+</div>
+<table class="edit_table">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+  <tr>
+    <div class="field">
+      <th><%= f.label :氏名 %><br /></th>
+      <th><%= f.text_field :user_name%></th>
+    </div>
+  </tr>
+  <tr>
+    <div class="field">
+      <td><%= f.label :フリガナ %><br /></td>
+      <td><%= f.text_field :user_phonetic %></td>
+    </div>
+  </tr>
+  <tr>
+    <div class="field">
+      <td><%= f.label :郵便番号 %><br /></td>
+      <td><%= f.text_field :postal %></td>
+    </div>
+  </tr>
+  <tr>
+    <div class="field">
+      <td><%= f.label :住所 %><br /></td>
+      <td><%= f.text_field :address %></td>
+    </div>
+  </tr>
+  <tr>
+    <div class="field">
+      <td><%= f.label :電話番号 %><br /></td>
+      <td><%= f.text_field :tell %></td>
+    </div>
+  </tr>
+  <tr>
+    <div class="field">
+      <td><%= f.label :メールアドレス %><br /></td>
+      <td><%= f.email_field :email, autofocus: true, autocomplete: "email" %></td>
+    </div>
+  </tr>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
+  <tr>
+    <div class="field">
+      <td><%= f.label :新規パスワード %> <i>(変更したくない場合には、空白のままにして下さい)</i><br /></td>
+      <td><%= f.password_field :password, autocomplete: "off" %>
+      <% if @minimum_password_length %>
+        <br />
+        <em><%= @minimum_password_length %> 文字以上入力してください</em></td>
+      <% end %>
+    </div>
+  </tr>
+  <tr>
+    <div class="field">
+      <td><%= f.label :新規パスワード確認 %><br /></td>
+      <td><%= f.password_field :password_confirmation, autocomplete: "off" %></td>
+    </div>
+  </tr>
+  <tr>
+    <div class="field">
+      <td><%= f.label :現在のパスワード %> <i>(変更を確認するために現在のパスワードが必要です)</i><br /></td>
+      <td><%= f.password_field :current_password, autocomplete: "off" %></td>
+    </div>
+  </tr>
+</table>
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "編集", class: "edit_btn" %>
   </div>
 <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
