--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,11 +28,48 @@
 
 
 
-
-
+/*swiper*/
+.swiper-container {
+    width: 100%;
+    height: 278px;
+    border-radius: 10px;
+}
+.pic1 {
+  width:200px;
+  height:250px;
+  background-image:url("1.jpg") ;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.pic2 {
+  width:200px;
+  height:250px;
+  background-image:url("2.jpg");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.pic3 {
+  width:200px;
+  height:250px;
+  background-image:url("3.jpg");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.pic4 {
+  width:200px;
+  height:250px;
+  background-image:url("4.jpg");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 
  /*伊藤order/complete*/
- .complete-back {
+ 
+.complete-back {
  	width:100%;
  	height:100%;
  	background-color:#dcdcdc;
@@ -70,60 +107,59 @@
  }
  .order {
  	background-color:white;
- 	width:800px;
  	margin:0 auto 30px;
+  height:800px;
  	padding:auto;
  	border:outset;
  	text-align:center;
  }
  .order-box {
- 	width:700px;
  	margin:0 auto;
  	border:inset 3px;
  	padding-top:2px;
  }
  .sendbox {
- 	font-size:20px;
  	text-align:center;
- 	border:outset 3px;
- 	height:150px;
+ 	height:130px;
  }
  .address-form {
- 	width:550px;
+ 	width:500px;
  	height:30px;
- 	border:solid 1px;
  	margin:0 auto;
  }
  .delivery {
  	font-size:20px;
  	text-align:center;
- 	border:outset;
+
  	height:150px;
  }
  .delivery-box {
- 	width:550px;
+ 	width:500px;
  	height:30px;
- 	border:solid 1px black;
  	margin:10px auto 0 ;
  	color:#dcdcdc;
+  border:solid 1px;
+  border-radius:5px;
+  border-color:#dcdcdc;
  }
  .pay {
  	font-size:20px;
  	text-align:center;
- 	border:outset 3px;
+
  	height:100px;
  }
  .preorder {
- 	font-size:20px;
  	text-align:center;
- 	border:outset 3px;
+
  }
  .pre-product {
- 	width:650px;
+ 	width:500px;
  	height:100px;
  	border:solid 1px;
  	margin:5px auto 0;
  	padding:8px 0 0 8px;
+  border-radius: 5px;
+  border-color:#dcdcdc;
  }
  .price-table {
  	float:right;
@@ -528,7 +564,7 @@ header{
   background-color: #c0c0c0;
 }
 .swipe-space{
-  width: 80%;
+  width: 70%;
   height: 280px;
   margin: 30px 10%;
   background-color: white;
