--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -3,18 +3,20 @@
 	 <div class="row">
       <div class="col-lg-3">
       </div>
-       <div class="order">
+       <div class="order col-lg-6">
     <h2>支払い方法・注文内容の確認</h2>
       
   <div class="order-box">
 
 	  <div class="sendbox">
-	   <h4>登録住所</h4>
+	    <h4>登録住所</h4>
 	   <div class="address-form">
+	   	東京都世田谷区1-1-1
 	   </div>
 	   <h4>送付先住所</h4>
 	   <div class="address-form">
-	   </div>
+	   	北海道札幌市南区4-5-6
+	  </div>
 	  </div>
 
       <div class="delivery">
@@ -36,7 +38,7 @@
        <div class="delivery-box">6月30日、午前中希望</div>
      </div>
      
-     <div class="pay clearfix">
+     <div class="pay">
       <h4>支払い方法の選択</h4>
       <div class="btn-group">
 	      <button type="button" class="btn btn-default">
@@ -55,8 +57,7 @@
      </div>
 
      <div class="preorder clearfix">
-     	<h4>商品の確認
-     	</h4>
+     	<h4>商品の確認</h4>
       <div class="pre-product clearfix">
       	<div class="product-image">NO IMAGE
       	</div>
@@ -80,8 +81,11 @@
 		</table>
 
 
-    </div>
+     </div>
+
     </div>
   </div>
+  <div class="col-lg-3"></div>
  </div>
+</div>
 </div>
