--- a/app/views/products/top.html.erb
+++ b/app/views/products/top.html.erb
@@ -16,7 +16,23 @@
 	</div>
 	<div class="top-box">
 		<div class="swipe-space">
-			<p>スライド実装スペース</p>
+			<div class="sample sample01">
+		  <div class="swiper-container">
+		    <div class="swiper-wrapper">
+		      <div class="swiper-slide pic1"></div>
+		      <div class="swiper-slide pic2"></div>
+		      <div class="swiper-slide pic3"></div>
+		      <div class="swiper-slide pic4"></div>
+		    </div>
+
+		    <div class="swiper-pagination"></div>
+		      
+		    <div class="swiper-button-prev"></div>
+		    <div class="swiper-button-next"></div>
+		  </div>
+		</div>
+
+
 		</div>
 		<div class="ranking-space">
 			<div class="product-heading">売上ランキング</div>
@@ -86,3 +102,22 @@
 		</div>
 	</div>
 </div>
+
+<script type="text/javascript">
+window.addEventListener('DOMContentLoaded', function() {
+  var swiper = new Swiper('.sample01 .swiper-container', {
+    pagination: '.swiper-pagination',
+    paginationClickable: true,
+    slidesPerView: 2,
+    spaceBetween: 10,
+    centeredSlides : true,
+    effect: "slide",
+    autoplay: '6000',
+    nextButton: '.swiper-button-next',
+    prevButton: '.swiper-button-prev',
+    loop: true
+  });
+}, false);
+
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.1/js/swiper.min.js"></script>
