product-top add

--- a/app/views/products/top.html.erb
+++ b/app/views/products/top.html.erb
@@ -2,21 +2,87 @@
 <div class="top-main">
 	<div class="genre-box">
 		<div class="genre-title">
-			<p class="genre-title-text">カテゴリー</p>
+			<p class="genre-title-text">カテゴリーで探す</p>
 		</div>
-		<div>
-			<p>※genreの折り返し処理</p>
-		</div>
+		<ul class="genre-list">
+		<li class="genre-list-item">J-Pop</li>
+		<li class="genre-list-item">ロック</li>
+		<li class="genre-list-item">ジャズ</li>
+		<li class="genre-list-item">カントリー</li>
+		<li class="genre-list-item">ブルース</li>
+		<li class="genre-list-item">クラブ</li>
+		<li class="genre-list-item">アニメ</li>
+		</ul>
 	</div>
 	<div class="top-box">
 		<div class="swipe-space">
 			<p>スライド実装スペース</p>
 		</div>
 		<div class="ranking-space">
-			<p>売上数が上位のProductを5つ表示</p>
+			<div class="product-heading">売上ランキング</div>
+			<div class="rankin-product">
+				<div class="ranking-integer">1位</div>
+				<div class="ranking-image"></div>
+				<div class="ranking-artist-text"><p>Artist名</p></div>
+				<div class="ranking-product-text"><p>商品名</p></div>
+			</div>
+			<div class="rankin-product">
+				<div class="ranking-integer">2位</div>
+				<div class="ranking-image"></div>
+				<div class="ranking-artist-text"><p>Artist名</p></div>
+				<div class="ranking-product-text"><p>商品名</p></div>
+			</div>
+			<div class="rankin-product">
+				<div class="ranking-integer">3位</div>
+				<div class="ranking-image"></div>
+				<div class="ranking-artist-text"><p>Artist名</p></div>
+				<div class="ranking-product-text"><p>商品名</p></div>
+			</div>
+			<div class="rankin-product">
+				<div class="ranking-integer">4位</div>
+				<div class="ranking-image"></div>
+				<div class="ranking-artist-text"><p>Artist名</p></div>
+				<div class="ranking-product-text"><p>商品名</p></div>
+			</div>
+			<div class="rankin-product">
+				<div class="ranking-integer">5位</div>
+				<div class="ranking-image"></div>
+				<div class="ranking-artist-text"><p>Artist名</p></div>
+				<div class="ranking-product-text"><p>商品名</p></div>
+			</div>
 		</div>
 		<div class="newproduct-space">
-			<p>発売日が最も新しいProductを5つ表示</p>
+			<div class="product-heading">新着一覧</div>
+			<div class="rankin-product">
+				<div class="ranking-integer">発売日</div>
+				<div class="ranking-image"></div>
+				<div class="ranking-artist-text"><p>Artist名</p></div>
+				<div class="ranking-product-text"><p>商品名</p></div>
+			</div>
+			<div class="rankin-product">
+				<div class="ranking-integer">発売日</div>
+				<div class="ranking-image"></div>
+				<div class="ranking-artist-text"><p>Artist名</p></div>
+				<div class="ranking-product-text"><p>商品名</p></div>
+			</div>
+			<div class="rankin-product">
+				<div class="ranking-integer">発売日</div>
+				<div class="ranking-image"></div>
+				<div class="ranking-artist-text"><p>Artist名</p></div>
+				<div class="ranking-product-text"><p>商品名</p></div>
+			</div>
+			<div class="rankin-product">
+				<div class="ranking-integer">発売日</div>
+				<div class="ranking-image"></div>
+				<div class="ranking-artist-text"><p>Artist名</p></div>
+				<div class="ranking-product-text"><p>商品名</p></div>
+			</div>
+			<div class="rankin-product">
+				<div class="ranking-integer">発売日</div>
+				<div class="ranking-image"></div>
+				<div class="ranking-artist-text"><p>Artist名</p></div>
+				<div class="ranking-product-text"><p>商品名</p></div>
+			</div>
 		</div>
 	</div>
 </div>
