--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -3,14 +3,65 @@
   <div class="row">
   	
   	<div class="col-lg-2">
-  	</div>
-
+  	 </div>
   	<div class="col-lg-8">
   	
-  	<h2>購入商品の詳細</h2>
+  	<h3>購入番号 5-555-5555-555</h3>
   	<div class="purchase-detail">
-  		購入した商品はありません
-  	</div>
+      
+      <div class="purchase1 clearfix">
+        <div class="date">
+          購入日
+          <div class="date1">
+            2018年5月12日
+         </div>
+       </div>
+
+       <div class="price-text">
+        合計
+        <div class="price-box">
+          3,640円
+        </div>
+       </div>
+       <div class="status">
+          配送状況：配達済み
+       </div>
+      </div>
+
+      <div class="purchase2 clearfix">
+        <div class="purchase2-image">NO IMAGE
+        </div>
+        <div class="purchase-product">
+          めっちゃいいCDっていう名のCD
+        </div>
+        <div class="purchase-amount">
+          購入数:1
+        </div>
+        <div class="purchase-price">
+         小計:2,560円
+        </div>
+        <div class="purchase-artist">
+          めっちゃいいバンド
+        </div>
+      </div>
+  	
+      <div class="purchase2 clearfix">
+        <div class="purchase2-image">NO IMAGE
+        </div>
+        <div class="purchase-product">
+          めっちゃダメなCDっていう名のCD
+        </div>
+        <div class="purchase-amount">
+          購入数:1
+        </div>
+        <div class="purchase-price">
+         小計:1,080円
+        </div>
+        <div class="purchase-artist">
+          めっちゃダメなバンド
+        </div>
+      </div>
+    </div>
 
 
 
@@ -18,13 +69,6 @@
 
   	<div class="col-lg-2">
   	</div>
-
-
-
-
-
-
-
   </div>
  </div>
 </div>
