--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,8 @@
 <div class="user-show-back">
  <div class="container">
   <div class="row">
-  	<div class="col-lg-3">
+  	<div class="user-show col-lg-3">
   		<h2>登録情報</h2>
-  		<div class="user-show">
   	    <table class="table table-striped">
   	     <tr>
   	     	<td>名前</td><td><%= @user.user_name %></td>
@@ -25,22 +24,19 @@
   	     </tr>
         </table>
          <button class="btn btn-default">登録情報を変更</button>
-     </div>
-
    </div>
 
-   <div class="col-lg-9">
+   <div class="user-box col-lg-9">
    		<h2>購入履歴</h2>
-   	  <div class="user-box">
 
 		   	<table class="table table-striped">
 		  <tr class="info">
-		  	<th>購入日</th>
-		    <th>ジャケット</th>
-		    <th>商品名</th>
-		    <th>Artist</th>
-		    <th>値段</th>
-		    <th>詳細</th>
+		  	<th class="th-purchase">購入日</th>
+		    <th class="th-purchase">ジャケット</th>
+		    <th class="th-purchase">商品名</th>
+		    <th class="th-purchase">Artist</th>
+		    <th class="th-purchase">値段</th>
+		    <th class="th-purchase">詳細</th>
 		  </tr>
 		  <tr>
 		    <td class="td-purchase">2018/6/24</td>
@@ -59,8 +55,9 @@
 		    <td class="td-purchase">ステータス</td>
 		  </tr>
 		</table>
-	   </div>
 	</div>
+
+    
 
 
 
