--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -1,3 +1,225 @@
 // Place all the styles related to the orders controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+ /*/order/show*/
+.purchase {
+ 	width:100%;
+ 	padding:30px 0 50px;
+ 	background-color:#dcdcdc;
+ }
+ .purchase-detail {
+  border:solid 1px;
+  border-radius:5px;
+  border-color:#dcdcdc;
+  background-color:white;
+  padding:10px;
+ }
+ .purchase1{
+   border:solid 1px;
+  border-color:#dcdcdc;
+  height:70px;
+  background-color:#b0e0e6;
+ }
+ .date {
+  width:150px;
+  height:30px;
+  line-height:35px;
+  float:left;
+ }
+ .date1 {
+  width:150px;
+  height:30px;
+  line-height:35px;
+  float:left;
+ }
+ .price-text {
+  width:150px;
+  height:30px;
+  line-height:35px;
+  float:left;
+ }
+ .price-box {
+  width:150px;
+  height:30px;
+  line-height:35px;
+  float:left;
+ }
+ .purchase2 {
+  border:solid 1px;
+  border-color:#dcdcdc;
+  height:145px;
+  margin:0 auto;
+ }
+ .purchase2-image {
+  width:120px;
+  height:120px;
+  border:solid 1px;
+  border-radius:5px;
+  border-color:#dcdcdc;
+  margin:10px 30px 10px 10px;
+  float:left;
+ }
+ .purchase-product {
+  width:300px;
+  height:60px;
+  float:left;
+  line-height:60px;
+ }
+ .purchase-amount {
+  width:200px;
+  height:60px;
+  float:right;
+  line-height:60px;
+ }
+ .purchase-price {
+  width:200px;
+  height:60px;
+  float:right;
+  line-height:60px;
+ }
+.purchase-artist {
+  width:200px;
+  height:60px;
+  float:left;
+  line-height:60px;
+}
+.status {
+	text-align:center;
+	float:right;
+	height:60px;
+	width:200px;
+	line-height: 60px;
+}
+
+
+
+
+/*order/new*/
+ .order-back {
+ 	width:100%;
+ 	height:100%;
+ 	padding:30px 0 30px;
+ }
+ .order {
+  border-radius:5px;
+ 	border:outset;
+  text-align:center;
+  padding-bottom:10px;
+  background-color:#b0e0e6;
+ }
+ .order-box {
+ 	border:solid 1px;
+  border-radius:5px;
+  border-color:#dcdcdc;
+ 	padding:10px 5px 10px;
+  background-color:white;
+ }
+ .sendbox {
+ 	text-align:center;
+ 	height:130px;
+ }
+ .address-form {
+  width:70%;
+ 	height:30px;
+ 	margin:0 auto;
+  border:solid 1px;
+  border-radius:5px;
+  border-color:#dcdcdc;
+ }
+ .delivery {
+ 	font-size:20px;
+ 	text-align:center;
+ 	height:140px;
+ }
+ .delivery-box {
+ 	width:70%;
+ 	height:30px;
+ 	margin:10px auto 0 ;
+ 	color:#dcdcdc;
+  border:solid 1px;
+  border-radius:5px;
+  border-color:#dcdcdc;
+ }
+ .pay {
+ 	font-size:20px;
+ 	text-align:center;
+  border-bottom:solid 1px;
+  border-color:#b0e0e6;
+  padding-bottom:10px;
+ }
+ .preorder {
+ 	text-align:center;
+
+ }
+ .pre-product {
+ 	width:100%;
+ 	height:100px;
+  border:solid 1px;
+ 	margin:5px auto 0;
+ 	padding:8px 0 0 8px;
+  border-radius: 5px;
+  border-color:#dcdcdc;
+ }
+ .price-table {
+ 	float:right;
+ }
+ .product-image {
+ 	width:80px;
+ 	height:80px;
+ 	border:solid 1px;
+ 	float:left;
+ }
+ .order-text {
+ 	float:left;
+ 	line-height: 80px;
+ }
+ .preorder-price {
+ 	float:right;
+ 	margin:50px 5px 0 0;
+ }
+
+
+
+
+
+ /*order/complete*/
+.complete-back {
+ 	width:100%;
+ 	height:100%;
+ 	padding-top:50px;
+ 	background-color: black;
+ }
+ .complete {
+ 	width:700px;
+ 	height:400px;
+ 	margin:0 auto 100px;
+ 	padding-top:20px;
+ 	border:outset;
+ }
+ .complete-big-text {
+ 	font-size:40px;
+ 	text-align:center;
+ }
+ .complete-text {
+ 	font-size:20px;
+ 	margin:50px 0 30px;
+ 	text-align:center;
+ }
+ .under{
+ 	text-decoration: underline;
+ }
+.logo {
+	width:380px;
+	height:170px;
+	background-image:url("logo.png");
+	 background-size: cover;
+	 margin:0 auto;
+}
+
+
+
+
+
+
+
