--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -2,52 +2,92 @@
  <div class="container">
   <div class="row">
   	
-  	<div class="col-lg-2">
-  	</div>
+      	<div class="col-lg-2">
+      	</div>
 
-  	<div class="col-lg-8">
-  	
-  	<h2>カート内の商品</h2>
-  	<div class="cart-detail clearfix">
-  	 <div class="cart-item">
-  	  
-  	  <div class="cart-image col-md-2">
-  	  	NO IMAGE
-  	  </div>
-  	  <div class="cart-text col-md-3">10fold
-  	  </div>
-  	   <div class="cart-text col-md-2">UNCHAIN
-  	  </div>
-  	  <div class="col-md-2">数量 1
-  	  </div>
-  	  <div class="col-md-2"> 3,240円
-  	  </div>
-  	  <div class="col-md-1"><button class="btn btn-danger">削除</button>
-  	  </div>
-
-
-  	  </div>
-  	  <div class="col-md-9">
-  	  </div>
-  	  <div class="col-md-3">
-  			<button class="btn btn-warning">支払い情報入力へ</button>
-  		</div>
-  	  </div>
-  	</div>
-
-
-
-  	</div>
-
-  	<div class="col-lg-2">
-  	</div>
-
-
+      	<div class="col-lg-8">
+      	
+      	<h3>カート内商品</h3>
+      	<div class="cart-detail clearfix">
+        	 
+           <div class="cart-item">
+        	  <div class="cart-image col-md-2">
+        	  	NO IMAGE
+        	  </div>
+        	  <div class="col-md-3">10fold
+        	  </div>
+        	   <div class="col-md-2">UNCHAIN
+        	  </div>
+        	  <div class="col-md-2">数量 1
+        	  </div>
+        	  <div class="col-md-2"> 3,240円
+        	  </div>
+        	  <div class="col-md-1"><button class="btn btn-danger">削除</button>
+        	  </div>
+      	  </div>
+         
+           <div class="cart-item">
+            <div class="cart-image col-md-2">
+              NO IMAGE
+            </div>
+            <div class="col-md-3">10fold
+            </div>
+             <div class="col-md-2">UNCHAIN
+            </div>
+            <div class="col-md-2">数量 1
+            </div>
+            <div class="col-md-2"> 3,240円
+            </div>
+            <div class="col-md-1"><button class="btn btn-danger">削除</button>
+            </div>
+          </div>
 
 
+          <div class="cart-item">
+            <div class="cart-image col-md-2">
+              NO IMAGE
+            </div>
+            <div class="col-md-3">10fold
+            </div>
+             <div class="col-md-2">UNCHAIN
+            </div>
+            <div class="col-md-2">数量 1
+            </div>
+            <div class="col-md-2"> 3,240円
+            </div>
+            <div class="col-md-1"><button class="btn btn-danger">削除</button>
+            </div>
+          </div>
 
+          <div class="cart-item">
+            <div class="cart-image col-md-2">
+              NO IMAGE
+            </div>
+            <div class="col-md-3">10fold
+            </div>
+             <div class="col-md-2">UNCHAIN
+            </div>
+            <div class="col-md-2">数量 1
+            </div>
+            <div class="col-md-2"> 3,240円
+            </div>
+            <div class="col-md-1"><button class="btn btn-danger">削除</button>
+            </div>
+          </div>
 
+      	  <div class="col-md-7">
+      	  </div>
+          <div class="col-md-2">
+            <button class="btn btn-info">カート内更新</button>
+          </div>
+      	  <div class="col-md-3">
+      			<button class="btn btn-warning">支払い情報入力へ</button>
+      		</div>
+      	  </div>
+      	</div>
 
+  	    <div class="col-lg-2">
+  	    </div>
+   </div>
   </div>
  </div>
-</div>
