--- a/app/views/orders/complete.html.erb
+++ b/app/views/orders/complete.html.erb
@@ -1,7 +1,8 @@
 <div class="complete-back">
+	<div class="logo"></div>
 	<div class="complete">
 	 <div class="complete-big-text">
-	  商品の購入が完了しました
+	  注文が完了しました
      </div>
 	  <div class="complete-text">
 	  お客様の注文番号は<span class="under">＜5-567-3758-347＞</span>です。<br>
@@ -9,7 +10,7 @@
 	  	<br>
 	  	注文した商品の詳細はこちら<br>
 	  	<br>
-	  	<button class="btn btn-default btn-lg">他の商品を探す</button>
+	  	<%= link_to "他の商品を探す" ,root_path, class:"btn btn-default btn-lg" %>
 	 </div>
 	</div>
 </div>
